--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,10 +17,9 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v1
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: 1.8
 
     - name: make gradelw executable
       run: chmod +x gradlew
