--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,16 +27,20 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: abanobmorkos10/java-maven:latest
+    - name: Build and tag Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/java-maven:latest .
+        docker tag ${{ secrets.DOCKER_USERNAME }}/java-app:latest ${{ secrets.DOCKER_USERNAME }}/java-maven:${{ github.sha }}
+
+    - name: Push Docker image
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/java-maven:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/java-maven:${{ github.sha }}
 
 
