--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,17 +30,17 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and tag Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/java-maven:latest .
-        docker tag ${{ secrets.DOCKER_USERNAME }}/java-app:latest ${{ secrets.DOCKER_USERNAME }}/java-maven:${{ github.sha }}
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest .
+        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:${{ github.sha }}
 
     - name: Push Docker image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/java-maven:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/java-maven:${{ github.sha }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:${{ github.sha }}
 
 
