--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,13 +34,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and tag Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest .
-        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/java-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:${{ github.sha }}
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest .
+  
 
     - name: Push Docker image
-      run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:${{ github.sha }}
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/java-maven:latest
 
 
